fix overflow

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -50,7 +50,9 @@
 
 #app{
 background-color: #F5F8FA;
+overflow-x: hidden;
 }
+
 .navbar-toggler{
     background-color: #F5F8FA;
 }
@@ -118,18 +120,22 @@ background-color: #F5F8FA;
                 }
              }
         }
-        .jumbotron-overlay {
-            width: 100vw;
-            height: 90vh;
-            background: rgba(0, 0, 0, .5);
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
+
 
 
     }
 }
+.jumbotron-overlay {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background: rgba(0, 0, 0, .5);
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 
 // stile advanced search ---------------------------------------------------
 
